tdf#126111: Ignore font fallback for PUA chars

By definition Private Use Area characters are font specific and fallback
font will most likely have a completely unrelated glyph, so showing
missing glyph box is better than fallback to random glyph.

This seems to be what MS Word does. This is also what CSS specifies
(https://drafts.csswg.org/css-fonts/#char-handling-issues and related
discussion https://github.com/w3c/csswg-drafts/issues/2110), and at
least what Chrome does
(https://chromium-review.googlesource.com/c/chromium/src/+/829378).

This however breaks tdf#33898 and reverts the follwing commit as it does
nothing now:

commit fcd4ea7f43ce180de067927b4b7aae407c022f65
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Feb 18 13:28:43 2011 +0000

    Resolves: fdo#33898 Try and use EUDC as first-level glyph fallback
    font

I think the user expectation here is not reasonable, and installing that
font does not cause MS Word to use it for PUA either unless it is
explicitly specified, and it seems to be rather odd to prioritize this
font when present for any PUA character that can be basically anything.

However, EUDC seems to be some Windows feature that when
installed/enabled would cause Windows to prefer the set font for PUA,
but I couldn't find any English instructions on how to do this and test
what MS Word does in this case.  But anyway, if support for EUDC thing
was to be restored, it would have to be done in a more specific way and
not just preferring any font named EUDC for any missing character on any
system.

Change-Id: I59c2610714af055b63b6921e8b046a430179f687